--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 :root {
-    --primary-color: #006400; /* أخضر غامق */
-    --secondary-color: #006400; /* أخضر غامق */
+    --primary-color: #1a501c; /* أخضر غامق */
+    --secondary-color: ##1a501c; /* أخضر غامق */
     --accent-color: #f59e0b;
-    --dark-color: #006400; /* أخضر غامق */
-    --darker-color: #006400; /* أخضر غامق */
-    --light-color: #1f2937;
+    --dark-color: #155417; /* أخضر غامق */
+    --darker-color: #1a501c; /* أخضر غامق */
+    --light-color: #ffffff;
     --text-color: #ffffff; /* نص أبيض */
     --text-muted: #9ca3af;
     --border-radius: 8px;
