--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --dark-color: #155417; /* أخضر غامق */
     --darker-color: #1a501c; /* أخضر غامق */
     --light-color: #ffffff;
-    --text-color: #ffffff; /* نص أبيض */
+    --text-color: #fffff; /* نص أبيض */
     --text-muted: #9ca3af;
     --border-radius: 8px;
     --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
